--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <style>
     
 </style>
- <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-<script src="node_modules/ls-components-myl/ls-ui.umd.js"></script>
-<link rel="stylesheet" href="./node_modules/ls-components-myl/ls-ui.css">
+ <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
+<script src="libs/ls-components-myl/ls-ui.umd.js"></script>
+<link rel="stylesheet" href="./libs/ls-components-myl/ls-ui.css">
 <script >
     const app = Vue.createApp({
   data() {
